@@ -35,17 +35,22 @@ public class CastorTest {
     }
 
     @Test
+    public void test_str_2_number_zero() {
+        Castors c = Castors.me();
+
+        assertEquals((Integer) 0, c.castTo("0", int.class));
+    }
+
+    @Test
     public void Object2Array() {
         Castors c = Castors.me();
 
         assertArrayEquals(new int[]{Integer.MIN_VALUE},
                           c.cast(Integer.MIN_VALUE, int.class, int[].class));
-        assertArrayEquals(new String[]{"First"},
-                          c.cast("First", String.class, String[].class));
+        assertArrayEquals(new String[]{"First"}, c.cast("First", String.class, String[].class));
 
         Dummy dummy = new Dummy(123, "abc", new Date());
-        assertArrayEquals(new Dummy[]{dummy},
-                          c.cast(dummy, Dummy.class, Dummy[].class));
+        assertArrayEquals(new Dummy[]{dummy}, c.cast(dummy, Dummy.class, Dummy[].class));
 
         assertTrue(c.canCast(int.class, int[].class));
         assertTrue(c.canCast(String.class, String[].class));
@@ -53,7 +58,8 @@ public class CastorTest {
 
         Castor<String, Object> string2Array = new String2Array();
 
-        assertArrayEquals((String[])string2Array.cast("[\"a\",\"b\",\"c\",123,456]", String[].class),
+        assertArrayEquals((String[]) string2Array.cast("[\"a\",\"b\",\"c\",123,456]",
+                                                       String[].class),
                           c.cast("[\"a\",\"b\",\"c\",123,456]", String.class, String[].class));
     }
 
@@ -81,8 +87,7 @@ public class CastorTest {
     public void test_null_to_byte_and_short() {
         Castors cts = Castors.me();
         Assert.assertEquals((byte) 0, cts.castTo(null, byte.class).byteValue());
-        Assert.assertEquals((short) 0, cts.castTo(null, short.class)
-                                          .shortValue());
+        Assert.assertEquals((short) 0, cts.castTo(null, short.class).shortValue());
     }
 
     /**
@@ -108,9 +113,7 @@ public class CastorTest {
         Calendar c = Calendar.getInstance();
         c.set(2008, 5, 20, 5, 46, 26);
 
-        Calendar c2 = Castors.me().cast("2008-06-20 05:46:26",
-                                        String.class,
-                                        Calendar.class);
+        Calendar c2 = Castors.me().cast("2008-06-20 05:46:26", String.class, Calendar.class);
 
         assertEquals(c.getTimeInMillis() / 1000, c2.getTimeInMillis() / 1000);
     }
@@ -204,10 +207,8 @@ public class CastorTest {
 
     @Test
     public void testString2Float() throws FailToCastObjectException {
-        assertEquals(Float.valueOf(34.67f),
-                     Castors.me().castTo("34.67", float.class));
-        assertEquals(new Float(34.67), Castors.me()
-                                              .castTo("34.67", Float.class));
+        assertEquals(Float.valueOf(34.67f), Castors.me().castTo("34.67", float.class));
+        assertEquals(new Float(34.67), Castors.me().castTo("34.67", Float.class));
     }
 
     @Test
@@ -220,8 +221,7 @@ public class CastorTest {
 
     @Test
     public void testString2JavaDate() throws FailToCastObjectException {
-        java.util.Date date = Castors.me().castTo("2008-6-12",
-                                                  java.util.Date.class);
+        java.util.Date date = Castors.me().castTo("2008-6-12", java.util.Date.class);
         Calendar cal = Calendar.getInstance();
         cal.setTime(date);
         assertEquals(2008, cal.get(Calendar.YEAR));
@@ -235,9 +235,7 @@ public class CastorTest {
     @Test
     public void testString2Date() {
         Calendar cal = Calendar.getInstance();
-        cal.setTime(Castors.me().cast("1977-9-21",
-                                      String.class,
-                                      java.sql.Date.class));
+        cal.setTime(Castors.me().cast("1977-9-21", String.class, java.sql.Date.class));
         assertEquals(1977, cal.get(Calendar.YEAR));
         assertEquals(8, cal.get(Calendar.MONTH));
         assertEquals(21, cal.get(Calendar.DAY_OF_MONTH));
@@ -246,9 +244,7 @@ public class CastorTest {
     @Test
     public void testString2Time() throws FailToCastObjectException {
         Calendar cal = Calendar.getInstance();
-        cal.setTime(Castors.me().cast("15:17:23",
-                                      String.class,
-                                      java.sql.Time.class));
+        cal.setTime(Castors.me().cast("15:17:23", String.class, java.sql.Time.class));
 
         assertEquals(15, cal.get(Calendar.HOUR_OF_DAY));
         assertEquals(17, cal.get(Calendar.MINUTE));
@@ -292,8 +288,7 @@ public class CastorTest {
 
     @Test
     public void testArray2String() throws Exception {
-        Email[] mails = {new Email("zzh@263.net"),
-                         new Email("zozohtnt@yahoo.com.cn")};
+        Email[] mails = {new Email("zzh@263.net"), new Email("zozohtnt@yahoo.com.cn")};
         String done = Castors.me().castToString(mails);
         Email[] mails2 = Castors.me().castTo(done, Email[].class);
         assertTrue(Lang.equals(mails, mails2));
@@ -302,8 +297,7 @@ public class CastorTest {
     @Test
     public void testString2Array() throws Exception {
         String orgs = "zzh@263.net,zozohtnt@yahoo.com.cn";
-        Email[] exp = {new Email("zzh@263.net"),
-                       new Email("zozohtnt@yahoo.com.cn")};
+        Email[] exp = {new Email("zzh@263.net"), new Email("zozohtnt@yahoo.com.cn")};
         Email[] done = Castors.me().castTo(orgs, Email[].class);
         assertTrue(Arrays.equals(exp, done));
     }
@@ -470,8 +464,7 @@ public class CastorTest {
         c2.setTime(d2);
         assertEquals(c1.get(Calendar.YEAR), c2.get(Calendar.YEAR));
         assertEquals(c1.get(Calendar.MONTH), c2.get(Calendar.MONTH));
-        assertEquals(c1.get(Calendar.DAY_OF_MONTH),
-                     c1.get(Calendar.DAY_OF_MONTH));
+        assertEquals(c1.get(Calendar.DAY_OF_MONTH), c1.get(Calendar.DAY_OF_MONTH));
         assertEquals(c1.get(Calendar.HOUR_OF_DAY), c2.get(Calendar.HOUR_OF_DAY));
         assertEquals(c1.get(Calendar.MINUTE), c2.get(Calendar.MINUTE));
         assertEquals(c1.get(Calendar.SECOND), c2.get(Calendar.SECOND));
@@ -490,7 +483,9 @@ public class CastorTest {
     // }
     @Test
     public void testString2Enum() {
-        Assert.assertEquals(AlipayNotifyType.StatusSync, Castors.create().castTo("StatusSync", AlipayNotifyType.class));
-        Assert.assertEquals(AlipayNotifyType.StatusSync, Castors.create().castTo("trade_status_sync", AlipayNotifyType.class));
+        Assert.assertEquals(AlipayNotifyType.StatusSync,
+                            Castors.create().castTo("StatusSync", AlipayNotifyType.class));
+        Assert.assertEquals(AlipayNotifyType.StatusSync,
+                            Castors.create().castTo("trade_status_sync", AlipayNotifyType.class));
     }
 }
